Updated from repo

--- a/details.html
+++ b/details.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Genreaology - Details</title>
+    <title>Genreology - Details</title>
 </head>
 
 <body>
@@ -15,10 +15,10 @@
 			</div>
 			<div class="nav">
 				<ul id="header-menu" class="menu">
-					<li class="menu-item selected">
+					<li class="menu-item">
 						<a href="index.html">Home</a>
 					</li>
-					<li class="menu-item">
+					<li class="menu-item selected">
 						<a href="details.html">Details</a>
 					</li>
 					<li class="menu-item">
@@ -68,7 +68,7 @@
 	</div>
 	<div class="footer">
 		<div class="tagline">
-			<span class="bold">Genrealogy</span> was developed by Melanie Justiniano and Matt Sheets to explore the evolution of music genres in the US.
+			<span class="bold">Genreology</span> was developed by Melanie Justiniano and Matt Sheets to explore the evolution of music genres in the US.
 		</div>
 		<div class="credits">
 			Powered by <a href="http://echonest.com/">The Echo Nest</a> & <a href="https://developers.google.com/maps/">Google Maps API</a>.
