--- a/screencast.html
+++ b/screencast.html
@@ -38,7 +38,7 @@
 		</div>
 		<div class="content static">
 			<div class="video">
-				<iframe width="560" height="315" src="//www.youtube.com/watch?v=tJpGvtD0AT4" frameborder="0" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="//www.youtube.com/embed/tJpGvtD0AT4" frameborder="0" allowfullscreen></iframe>
 			</div>			
 		</div>
 	</div>
